--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <main>
     <h1>Welcome to my Creative Coding Page</h1>
     <h3><a href="TestProject/index.html">Test Project</a></h3>
-    <h3><a href="in classassignment 2/TestProject/index.html">class assignment#2</a></h3>
+    <h3><a href="inclass_1">Bird</a></h3>
+    <h3><a href="inclass_2">Catch the ball</a></h3>
+    <h3><a href="inclass_3">Catch the ball</a></h3>
   </main>
 </body>
 
