--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h3><a href="TestProject/index.html">Test Project</a></h3>
     <h3><a href="inclass_1">Bird</a></h3>
     <h3><a href="inclass_2">Catch the ball</a></h3>
-    <h3><a href="inclass_3">Catch the ball</a></h3>
+    <h3><a href="inclass_3">Cool Squares</a></h3>
   </main>
 </body>
 
