--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <h3><a href="inclass_1">Bird</a></h3>
     <h3><a href="inclass_2">Catch the ball</a></h3>
     <h3><a href="inclass_3">Cool Squares</a></h3>
+    <h3><a href="assignment_1">Generative Art assignment #1</a></h3>
+    <h3><a href="playingaround">Just testing diffrent things</a></h3>
+
   </main>
 </body>
 
