--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h3><a href="inclass_2">Catch the ball</a></h3>
     <h3><a href="inclass_3">Cool Squares</a></h3>
     <h3><a href="inclass_4">Many balls</a></h3>
+    <h3><a href="inclass_5">Raining Cats and Dogs</a></h3>
     <h3><a href="assignment_1">Generative Art assignment #1</a></h3>
     <h3><a href="playingaround">Just testing diffrent things</a></h3>
 
