--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <h3><a href="inclass_3">Cool Squares</a></h3>
     <h3><a href="inclass_4">Many balls</a></h3>
     <h3><a href="inclass_5">Raining Cats and Dogs</a></h3>
-    <h3><a href="assignment_1">Generative Art assignment #1</a></h3>
-    <h3><a href="playingaround">Just testing diffrent things</a></h3>
+    <h3><a href="inclass_6">image manipulation #1</a></h3>
 
+    <h3><a href="assignment_1">Generative Art assignment #1</a></h3>
+    <h3><a href="assignment_2">Project 2</a></h3>
+    <h3><a href="playingaround">Just testing diffrent things</a></h3>
   </main>
 </body>
 
