--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <h3><a href="inclass_4">Many balls</a></h3>
     <h3><a href="inclass_5">Raining Cats and Dogs</a></h3>
     <h3><a href="inclass_6">image manipulation #1</a></h3>
-  <h3><a href="inclass_6_pt2">image manipulation #2</a></h3>
+
+  <h3><a href="assignment_3_1">Assignment #3 pt 1</a></h3>
+  <h3><a href="assignment_3_2">Assignment #3 pt 2</a></h3>
+  <h3><a href="assignment_3_3">Assignment #3 pt 3</a></h3>
+  <h3><a href="assignment_3_4">Assignment #3 pt 4</a></h3>
+  <h3><a href="assignment_3_5">Assignment #3 pt 5</a></h3>
+
 
     <h3><a href="assignment_1"> Let's Ice Skate</a></h3>
     <h3><a href="assignment_2">Bee Happy</a></h3>
