--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <h3><a href="assignment_3_4">Assignment #3 pt 4</a></h3>
   <h3><a href="assignment_3_5">Assignment #3 pt 5</a></h3>
 
-  <h3><a href="fin_pt1">Nature</a></h3>
-  <h3><a href="fin_pt2">Industrial</a></h3>
+  <h3><a href="fin_pt1">Nature(click for sound)</a></h3>
+  <h3><a href="fin_pt2">City(click for sound)</a></h3>
 
 
 
